# Unified-Shopping-List

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  makefile  pyproject.toml  security.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linting-and-tests.yml  pull-requests.yml
AppLambda/: requirements.txt
AppLambda/src/: app.py  app_settings.py  config.py
AppLambda/src/clients/: alexa.py  aws.py  mealie.py
AppLambda/src/clients/routes/: mealie.py
AppLambda/src/handlers/: _base.py  alexa.py  core.py  mangum.py  todoist.py
AppLambda/src/models/: _base.py  account_linking.py  alexa.py  aws.py  core.py  email.py  mealie.py  todoist.py
AppLambda/src/routes/: account_linking.py  alexa.py  auth.py  core.py  event_handlers.py  mealie.py  todoist.py
AppLambda/src/services/: alexa.py  auth.py  auth_token.py  core.py  factory.py  mealie.py  rate_limit.py  smtp.py  todoist.py  user.py
AppLambda/src/static/email_templates/: password_reset.html  registration.html
AppLambda/src/static/styles/: styles.css
AppLambda/src/static/templates/: _base.html  alexa_config.html  change_password.html  home.html  list_sync_mapping.html  login.html  mealie_config.html  password_reset.html  privacy_policy.html  register.html  todoist_config.html
deploy/: template.yaml
tests/: conftest.py  utils.py
tests/api_tests/account_linking_tests/: test_alexa_account_linking.py  test_mealie_account_linking.py  test_todoist_account_linking.py
tests/api_tests/auth_tests/: test_delete_account.py  test_login.py  test_registration.py  test_reset_password.py
tests/api_tests/client_tests/: test_dynamodb_client.py
tests/api_tests/crud_tests/: test_alexa_crud.py
tests/client_tests/: test_alexa_client.py  test_dynamodb_client.py  test_mealie_client.py
tests/event_handler_tests/: test_alexa_event_handler.py  test_mealie_event_handler.py  test_todoist_event_handler.py
tests/fixtures/: __init__.py  fixture_users.py
tests/fixtures/clients/: fixture_alexa_client.py  fixture_mealie_client.py  fixture_sqsfifo_client.py
tests/fixtures/clients/mealie/: fixture_mealie_client.py  router.py
tests/fixtures/databases/alexa/: fixture_alexa_database.py  mock_alexa_database.py  router.py
tests/fixtures/databases/mealie/: router.py  (+2 more)
tests/fixtures/services/: fixture_alexa_services.py  fixture_core_services.py  fixture_mealie_services.py  fixture_todoist_services.py
tests/mocks/: database.py
tests/model_tests/: test_account_linking_models.py  test_mealie_models.py
tests/service_tests/: test_alexa_list_service.py  test_auth_token_service.py  test_mealie_list_service.py  test_rate_limit_service.py  test_todoist_task_service.py  test_user_service.py
tests/sync_tests/: test_alexa_sync.py  test_core_sync.py  test_todoist_sync.py
tests/utils/: event_handlers.py  generators.py  info.py  users.py
(+4 files in other folders)
